4.0.0 - feature/MPBA - Big fix, adding Kafka, Dockerfile